--- a/internships.html
+++ b/internships.html
@@ -64,6 +64,7 @@
         .nav-links {
             display: flex;
             gap: 2rem;
+            list-style: none;
         }
 
         .nav-links a {
@@ -76,6 +77,35 @@
             color: var(--accent);
         }
 
+        .menu-icon {
+            display: none;
+            cursor: pointer;
+            font-size: 1.5rem;
+            color: var(--text-primary);
+        }
+
+        @media screen and (max-width: 768px) {
+            .menu-icon {
+                display: block;
+            }
+
+            .nav-links {
+                display: none;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 100%;
+                background: rgba(0, 0, 0, 0.95);
+                padding: 1rem;
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+            }
+
+            .nav-links.active {
+                display: flex;
+            }
+        }
         /* Main Content Styles */
         .main-content {
             padding: 120px 2rem 4rem;
@@ -354,10 +384,45 @@
         .social-links a:hover {
             color: var(--accent);
         }
+        @media screen and (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
+}
 
         @media (max-width: 768px) {
+            header {
+                padding: 1rem;
+            }
+
+            nav {
+                position: relative;
+            }
+
             .nav-links {
                 display: none;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                right: 0;
+                background: rgba(0, 0, 0, 0.95);
+                padding: 1rem;
+                flex-direction: column;
+                gap: 1rem;
+                text-align: center;
+            }
+
+            .nav-links.active {
+                display: flex;
+            }
+
+            .menu-toggle {
+                display: block;
+                background: none;
+                border: none;
+                color: var(--text-primary);
+                font-size: 1.5rem;
+                cursor: pointer;
             }
 
             .page-title h1 {
@@ -366,6 +431,23 @@
 
             .main-content {
                 padding: 100px 1rem 2rem;
+            }
+
+            .category-card {
+                padding: 1.5rem;
+            }
+
+            .application-process,
+            .application-form {
+                padding: 2rem 1rem;
+            }
+
+            .process-steps {
+                gap: 1.5rem;
+            }
+
+            .benefits-grid {
+                gap: 1.5rem;
             }
         }
     </style>
@@ -377,11 +459,13 @@
             <div class="logo">
                 <img src="logo.jpg" alt="TechToFun Logo">
             </div>
+            <button class="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </button>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="index.html#services">Services</a>
                 <a href="index.html#about">About</a>
-                <!-- <a href="blogs.html">Blog</a> -->
                 <a href="internships.html">Internships</a>
                 <a href="index.html#mentoring">Mentoring</a>
                 <a href="index.html#contact">Contact</a>
@@ -608,3 +692,11 @@
     </script>
 </body>
 </html> 
+<script>
+    document.querySelector('.menu-toggle').addEventListener('click', function() {
+        document.querySelector('.nav-links').classList.toggle('active');
+    });
+</script>
+</body>
+</html>
+
