--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechToFun - Empowering Your Tech Journey</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TechToFun: Join the Best Online Tech Community for Tips, Tutorials & Discussions</title>
+<meta name="description" content="Join TechToFun: Connect with developers & tech enthusiasts. Get expert tutorials, engage in discussions, and stay updated on the latest tech trends.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
