--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="description" content="Join TechToFun: Connect with developers & tech enthusiasts. Get expert tutorials, engage in discussions, and stay updated on the latest tech trends.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <meta name="google-site-verification" content="2ZoK01bjzjdu0m8Pcbn4crvzGRB4vZER84q5HBlJcJI" />
     <style>
         /* Theme Variables */
         :root {
