--- a/index.html
+++ b/index.html
@@ -1903,12 +1903,14 @@
                         <h3>Payment Details</h3>
                         <p>Scan the QR code to pay ₹99</p>
                         <div class="qr-code">
-                            <img src="your-qr-code.png" alt="Payment QR Code" id="paymentQR">
+                            <img src="QRcode.jpg" alt="Payment QR Code" id="paymentQR">
                         </div>
                         <p class="payment-instructions">After payment:</p>
                         <ol>
                             <li>Take a screenshot of your payment confirmation</li>
-                            <li>Send it to our WhatsApp number: <a href="https://wa.me/91820658046" target="_blank">820658046</a></li>
+                            <!-- <li>Send it to our WhatsApp number: <a href="https://wa.me/91820658046" target="_blank">820658046</a></li> -->
+                              <li>Send it to our linkedin <a href="https://www.linkedin.com/company/techtofun-edu/" target="_blank">link</a></li>
+                           
                             <li>Include your transaction ID in the message</li>
                             <li>Our team will contact you within 24 hours to schedule your session</li>
                         </ol>
