--- a/index.html
+++ b/index.html
@@ -664,11 +664,11 @@
             color: #ccd6f6;
         }
 
-        .service-card p {
+        /* .service-card p {
             color: #8892b0;
             line-height: 1.6;
             margin-bottom: 1.5rem;
-        }
+        } */
 
         .service-features {
             list-style: none;
@@ -1493,9 +1493,9 @@
             right: -3rem;
             top: 0;
             background: var(--accent);
-            color: var(--bg-primary);
+            color: var(--bg-primary);   
             padding: 0.5rem 1.5rem;
-            border-radius: 20px;
+            border-radius: 10px;
             font-weight: bold;
             font-size: 0.9rem;
             box-shadow: 0 0 20px rgba(100, 255, 218, 0.2);
@@ -1520,7 +1520,7 @@
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
         }
 
-        .timeline-content::before {
+        /* .timeline-content::before {
             content: '';
             position: absolute;
             right: -1rem;
@@ -1530,7 +1530,7 @@
             background: var(--accent);
             border-radius: 50%;
             box-shadow: 0 0 20px var(--accent);
-        }
+        } */
 
         .timeline-item:nth-child(even) .timeline-content::before {
             right: auto;
@@ -1954,6 +1954,7 @@
             </div>
         </div>
     </section>
+    <section></section>
 
     <!-- Blog Section
     <section class="section" id="blog">
